@@ -1,4 +1,5 @@
 0.9.1
+   - bug [9701] "OwnerRelation.java generære ikke isMemberOfColection."
    - bug [9699] "Null Excaption in MarcxchangeWorkRelation_1.java"
    - bug [9676] "unødig while i PTIManager::void update()"
    - bug [9660] "DublinCore får tomme værdier sat fra korrekt InputStream"
